<resources>

    <string name="app_name">AssistantSMS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Paramètres</string>
    <string name="title_activity_main">AssistantSMS</string>
    <string name="menu_history">Historique</string>
    <string name="menu_history_geo">Historique geographique</string>
    <string name="menu_about">A propos</string>
    <string name="menu_main">Menu principal</string>
    <string name="title_activity_history">Historique</string>
    <string name="title_activity_history_geo">Historique géographique</string>
    <string name="title_activity_create_sms">Nouvel SMS</string>
    <string name="title_activity_modify_sms">Modification</string>
    <string name="title_activity_about">A propos</string>
    <string name="title_activity_setting">Paramètre</string>
    <string name="receiver">Destinataire(s)</string>
    <string name="contact">Contact</string>
    <string name="map">Carte</string>
    <string name="calendar">Calendrier</string>
    <string name="message">Message</string>
    <string name="send">Condition</string>
    <string name="sms">texte: </string>
    <string name="lieu">Ou: </string>
    <string name="date">Quand: </string>
    <string name="destinataire">A: </string>
    <string name="mapKey">0bZmJZZKGv4XSXz9kTm1vQZSh-j9n-pDpHviChQ</string>
    <string name="title_activity_contact">Contact</string>
    <string name="stringcontact">contact</string>
    <string name="label_time1">HH:MM</string>
    <string name="title_activity_localisation">Localisation</string>
    <string name="rechercheMap">Recherche Map</string>
    <string name="service">Service</string>
    <string name="notification">Notification</string>
    <string name="aucunSMS">Aucun SMS enregistrer</string>
    <string name="title_activity_main_activitytt">MainActivitytt</string>
    <string name="label_time2">JJ/MM/AAAA</string>
    <string name="about_projet">Projet du master IHM 2012 de Toulouse</string>
    <string name="about_etudiant">Réalisé par M. François et N. Barcacci</string>
    <string name="title_activity_sms_detail">SmsDetail</string>
    <string name="sms_detail">-1</string>
    <string name="sms_id">-1</string>

</resources>