<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_refresh" android:icon="@drawable/ic_navigation_refresh" android:title="Nouvel SMS" android:showAsAction="always" android:orderInCategory="1"></item>
    <item android:id="@+id/menu_create_sms" android:icon="@drawable/ic_content_new_email" android:title="Nouvel SMS" android:showAsAction="always" android:orderInCategory="1"></item>
    <item android:id="@+id/menu_history" android:title="@string/menu_history" android:orderInCategory="2"></item>
    <item android:id="@+id/menu_history_geo" android:title="@string/menu_history_geo" android:orderInCategory="3"></item>
    <item android:id="@+id/menu_settings" android:title="@string/menu_settings" android:orderInCategory="4" android:showAsAction="never" />
    
    <item android:id="@+id/menu_about" android:title="@string/menu_about" android:orderInCategory="5"></item>
</menu>
