<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="detail"
    android:orientation="vertical"
    android:paddingBottom="10dip"
    android:paddingTop="10dip" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/stringdestinataire"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/destinataire" 
	        android:textAppearance="?android:attr/textAppearanceMedium"/>

       <TextView 
            android:text="@string/destinataire" android:id="@+id/destinataire"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:maxLines="1">
		</TextView>

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/stringDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/date" 
	        android:textAppearance="?android:attr/textAppearanceMedium"/>

       <TextView 
            android:text="@string/date" android:id="@+id/date"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:maxLines="1">
		</TextView>

    </LinearLayout> 
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
	        android:id="@+id/stringSMS"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sms" 
	        android:textAppearance="?android:attr/textAppearanceMedium"/>

       <TextView 
            android:text="@string/sms" android:id="@+id/sms"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:maxLines="1">
		</TextView>

    </LinearLayout> 
    
     <TextView
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/sms_id"
         android:visibility="invisible" />

</LinearLayout>